09-network-policies/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lab-09-netpol
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
